@@ -204,7 +204,7 @@ parameter_list|)
 throws|throws
 name|ServletException
 block|{   }
-comment|/**    * Resolves the requester hostname and delegates the request to the chain.    *<p>    * The requester hostname is available via the {@link #get} method.    *    * @param request servlet request.    * @param response servlet response.    * @param chain filter chain.    *    * @throws IOException thrown if an IO error occurrs.    * @throws ServletException thrown if a servet error occurrs.    */
+comment|/**    * Resolves the requester hostname and delegates the request to the chain.    *<p>    * The requester hostname is available via the {@link #get} method.    *    * @param request servlet request.    * @param response servlet response.    * @param chain filter chain.    *    * @throws IOException thrown if an IO error occurs.    * @throws ServletException thrown if a servlet error occurs.    */
 annotation|@
 name|Override
 DECL|method|doFilter (ServletRequest request, ServletResponse response, FilterChain chain)
